Kubernetes/curl-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  labels:
    name: curl-pod
spec:
  containers:
    - name: main
      image: curlimages/curl
      command: ["sleep", "36800"]
      resources:
        limits:
          memory: "128Mi"
          cpu: "100m"
