Kubernetes/fortune-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-dep
spec:
  selector:
    matchLabels:
      app: fortune-dep
  template:
    metadata:
      labels:
        app: fortune-dep
    spec:
      containers:
        - name: html-generator
          image: luksa/fortune:latest
          volumeMounts:
            - name: html
              mountPath: /var/htdocs
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
        - name: web-server
          image: nginx:alpine
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
              protocol: TCP
      volumes:
        - name: html
          emptyDir: {}
