Kubernetes/kubia-man.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubia-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubia-dep
  template:
    metadata:
      labels:
        app: kubia-dep
    spec:
      containers:
        - name: kubia-dep
          image: luksa/kubia
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
