Kubernetes/kubia-web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-kubia
spec:
  selector:
    matchLabels:
      app: git-kubia
  template:
    metadata:
      labels:
        app: git-kubia
    spec:
      containers:
        - name: web-server
          image: nginx:alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
              readOnly: true
          ports:
            - containerPort: 80
              protocol: TCP
      volumes:
        - name: html
          gitRepo:
            repository: https://github.com/abhi9Vishwa-exe/kubia-website-example.git
            revision: master
            directory: .
