Kubernetes/pod-mongo-dep-f98ccb584-86mf4.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2021-12-17T14:09:48Z"
  generateName: mongo-dep-f98ccb584-
  labels:
    app: mongo-dep
    pod-template-hash: f98ccb584
  name: mongo-dep-f98ccb584-86mf4
  namespace: default
  ownerReferences:
    - apiVersion: apps/v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicaSet
      name: mongo-dep-f98ccb584
      uid: 89193adc-edab-4226-9e5d-0b3e88687681
  resourceVersion: "10168"
  uid: 3db6c003-267a-40ed-af00-d09c4f1b2809
spec:
  containers:
    - image: mongo:4.0.10
      imagePullPolicy: IfNotPresent
      name: mongo-dep
      ports:
        - containerPort: 77
          protocol: TCP
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
        requests:
          cpu: 500m
          memory: 128Mi
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
        - name: mypv
          mountPath: /data/mypv/
        - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
          name: kube-api-access-k45t2
          readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: docker-desktop
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
  volumes:
    - name: mypv
      persistentVolumeClaim:
        claimName: mypvc
    - name: kube-api-access-k45t2
      projected:
        defaultMode: 420
        sources:
          - serviceAccountToken:
              expirationSeconds: 3607
              path: token
          - configMap:
              items:
                - key: ca.crt
                  path: ca.crt
              name: kube-root-ca.crt
          - downwardAPI:
              items:
                - fieldRef:
                    apiVersion: v1
                    fieldPath: metadata.namespace
                  path: namespace
status:
  conditions:
    - lastProbeTime: null
      lastTransitionTime: "2021-12-17T14:09:48Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2021-12-17T14:10:33Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2021-12-17T14:10:33Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2021-12-17T14:09:48Z"
      status: "True"
      type: PodScheduled
  containerStatuses:
    - containerID: docker://7e8b8b9efa36495a456e0e03a8ece537daf6b3f65e8611f5bf23d1bbbdfc3a0a
      image: mongo:4.0.10
      imageID: docker-pullable://mongo@sha256:7df93c5e2d140beabc39ef225da618df28cc916a5f5f295a41858accc0f46a0b
      lastState: {}
      name: mongo-dep
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2021-12-17T14:10:32Z"
  hostIP: 192.168.65.4
  phase: Running
  podIP: 10.1.0.22
  podIPs:
    - ip: 10.1.0.22
  qosClass: Guaranteed
  startTime: "2021-12-17T14:09:48Z"
