Kubernetes/kubia-svc-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  selector:
    app: fortune-dep
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30142
