Kubernetes/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress
  labels:
    name: kubia-ingress
spec:
  tls:
    - hosts:
        - kubia.example.com
      secretName: kubia-ingress-tls
  rules:
    - host: kubia.example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubia-svc
                port:
                  number: 8080
